# life

./: .gitignore  CNAME  Cargo.toml  LICENSE  Makefile  README.md  build_wasm.sh  index.html  output.wasm  rust-toolchain.toml
.github/workflows/: build.yml  test.yml
assets/: index.html
benches/: changes.rs  life_like.rs  logic_vs_lookup.rs  moore_neighborhood.rs
proptest-regressions/: lib.txt
src/: lib.rs  lookup.rs  pattern.rs
wbindgen/: main.d.ts  main.js  main_bg.wasm  main_bg.wasm.d.ts
web/: main.wasm
web/wbindgen/: main.js  main_bg.wasm
