[package]
name = "chips"
version = "0.1.0"
authors = ["cgm616 <cgm616@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22.3"
getrandom = { version = "0.2.3", features = ["js"] }
macroquad = { version = "0.3.6", features = ["log-impl"] }
rand = "0.8.4"

[dev-dependencies]
proptest = "1.0.0"

[profile.release]
lto = true
opt-level = 's'
